src/snapshots/interpreter__parser__tests__known_macros@eq_num.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\adjdemerits=5[not part]`"
---
stmts:
  - KnownMacro:
      name: adjdemerits
      args:
        - Token: Assign
        - Token:
            Number: "5"
      is_alt: false
  - SquareBlock:
      - Text: not
      - Token: Space
      - Text: part
errors: []

