src/snapshots/interpreter__parser__tests__known_macros@m_macro.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\cite\\asf`"
---
stmts:
  - KnownMacro:
      name: cite
      args:
        - Macro:
            name: asf
      is_alt: false
errors: []

